Add ticket related relations
